package Modele;

/**
 * Created by Yacine on 04/02/2015.
 */
public enum Sexe {
    HOMME,FEMME
}
